$Id$

2020-12-12  Alex Samorukov  <samm@os2.kiev.ua>

	Add automake 1.16.2 to the list of tested versions

2020-12-05  Douglas Gilbert  <dgilbert@interlog.com>

	smartctl: expand -n option to include SCSI. Code from Simon
	Fairweather. Still thinking about how to handle SCSI "stopped"
	state which requires the user to send a SCSI command to restart.

2020-12-04  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Print Log Page Attributes.  Print NVMe 1.4 features.

	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp: Fix check for LPO support.

2020-12-03  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Print NVMe version.

	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp: Limit NVMe log transfer size
	to one page.  This should fix device or kernel crashes on '-l error'
	if log has more than 64 entries (#1404, Debian Bug 947803).

	nvmeprint.cpp: Read only requested number of entries from NVMe
	Error Information Log.

2020-11-23  Christian Franke  <franke@computer.org>

	smartd.cpp: Allow to specify a delay limit for staggered self-tests.
	smartd.conf.5.in: Document new functionality.

2020-11-21  Christian Franke  <franke@computer.org>

	smartd.cpp: Add staggered self-tests (#310).
	smartd.conf.5.in: Document new functionality.

2020-11-17  Dmitriy Potapov <atomsk+oss@google.com>

	smartd.cpp: Don't write attrlog when device is skipped due to idle or
	standby mode, or if attributes were not read for any other reason
	(GH pull/75).

2020-11-09  Christian Franke  <franke@computer.org>

	smartd.cpp: Resolve symlinks before device names are checked for
	duplicates (#1390).
	dev_interface.cpp, dev_interface.h: Add 'get_unique_dev_name()'
	and 'is_raid_dev_type()' to support platform specific modifications.
	smartd.conf.5.in: Document new functionality.

2020-11-07  Christian Franke  <franke@computer.org>

	json.cpp, json.h: Add YAML support.
	smartctl.cpp: Add '--json=y' option.
	smartctl.8.in: Document new option.
