@@ -3,6 +3,7 @@ $Id$
 2020-12-12  Alex Samorukov  <samm@os2.kiev.ua>
 
 	Add automake 1.16.2 to the list of tested versions
+	os_freebsd.cpp: number of minor patches from Christian Franke
 
 2020-12-05  Douglas Gilbert  <dgilbert@interlog.com>
 
